--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas==0.24.2
-numpy
-streamlit
-PyDrive
-gspread 
-oauth2client
+
 google-colab
+pandas==1.3.3
+numpy==1.21.2
+streamlit==1.14.0
+pydrive==1.3.1
+gspread==4.0.1
+oauth2client==4.1.3
