--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,36 @@
-
-google-colab
-pandas==1.3.3
-numpy==1.21.2
-streamlit==1.14.0
-pydrive==1.3.1
-gspread==4.0.1
+altair==5.1.2
+blinker==1.6.2
+cachetools==5.3.1
+click==8.1.7
+google-api-core==2.12.0
+google-api-python-client==2.102.0
+google-auth==2.23.2
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
+googleapis-common-protos==1.60.0
+gspread==5.11.3
+httplib2==0.22.0
+numpy==1.26.0
 oauth2client==4.1.3
+oauthlib==3.2.2
+pandas==2.1.1
+Pillow==10.0.1
+protobuf==4.24.4
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pydeck==0.8.1b0
+PyDrive==1.3.1
+pyparsing==3.1.1
+pytz==2023.3.post1
+requests-oauthlib==1.3.1
+rsa==4.9
+streamlit==1.27.2
+tenacity==8.2.3
+toml==0.10.2
+toolz==0.12.0
+tzdata==2023.3
+tzlocal==5.1
+uritemplate==4.1.1
+validators==0.22.0
+watchdog==3.0.0
