--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ google-auth-oauthlib==1.1.0
 googleapis-common-protos==1.60.0
 gspread==5.11.3
 httplib2==0.22.0
-numpy==1.26.0
+numpy==1.24.4
 oauth2client==4.1.3
 oauthlib==3.2.2
-pandas==2.1.1
+pandas==2.0.3
 Pillow==10.0.1
 protobuf==4.24.4
 pyarrow==13.0.0
@@ -34,3 +34,4 @@ tzlocal==5.1
 uritemplate==4.1.1
 validators==0.22.0
 watchdog==3.0.0
+gspread_formatting
